kustomization/overlays/prod/traefik/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kube-vip.io/loadbalancerIPs: 10.11.1.64
  name: traefik-svc
spec:
  externalTrafficPolicy: Local
  ports:
    - name: imapsecure
      protocol: TCP
      port: 993
    - name: mqtts
      protocol: TCP
      port: 8883
    - name: smtpsecure
      protocol: TCP
      port: 465
    - name: web
      protocol: TCP
      port: 80
    - name: websecure
      protocol: TCP
      port: 443
    - name: websecure-ext
      protocol: TCP
      port: 8443
  selector:
    app.kubernetes.io/name: traefik
  type: LoadBalancer
