kustomization/overlays/prod/traefik/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: authelia-ingress
spec:
  rules:
    - host: auth.tswn.us
      http:
        paths:
          - backend:
              service:
                name: authelia-svc
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: traefik-dashboard-ingress
spec:
  rules:
    - host: traefik.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
